# zetamarkets-py

./: README.md  pyproject.toml
zetamarkets/: __init__.py  assets.py  client.py  constants.py  events.py  exchange.py  markets.py  network.py  newclient.py  newsubclient.py  newsubexchange.py  oracle.py  oracle_utils.py  program-instructions.py  program_instructions.py  risk.py  riskcalc.py  subexchange.py  types.py  utils.py  var_types.py
zetamarkets/examples/: basic_example_order.py  basic_setup.py  oracle.py
zetamarkets/idl/: zeta.json
zetamarkets/my_client/: program_id.py
zetamarkets/my_client/accounts/: __init__.py  greeks.py  insurance_deposit_account.py  margin_account.py  market_indexes.py  market_node.py  open_orders_map.py  referral_account.py  referrer_account.py  referrer_alias.py  settlement_account.py  socialized_loss_account.py  spread_account.py  state.py  underlying.py  whitelist_deposit_account.py  whitelist_insurance_account.py  whitelist_trading_fees_account.py  zeta_group.py
zetamarkets/my_client/errors/: custom.py
zetamarkets/my_client/instructions/: __init__.py  add_market_indexes.py  burn_vault_tokens.py  cancel_expired_order.py  cancel_order.py  cancel_order_by_client_order_id.py  cancel_order_by_client_order_id_no_error.py  cancel_order_halted.py  cancel_order_no_error.py  clean_market_nodes.py  clean_zeta_markets.py  clean_zeta_markets_halted.py  close_margin_account.py  close_open_orders.py  close_spread_account.py  collect_treasury_funds.py  crank_event_queue.py  deposit.py  deposit_insurance_vault.py  expire_series.py  liquidate.py  (+49 more)
(+14 files in other folders)
