[tool.poetry]
name = "zetamarkets"
version = "0.0.1-alpha"
description = "Coming on Saturday"
authors = ["Joel Lee <joel@joellee.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
