[tool.poetry]
name = "zetamarkets"
version = "0.0.1-alpha"
description = "Python Client library for Zetamarkets"
authors = ["Joel Lee <joel@joellee.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.18.2"
solana = "^0.21.0"
anchorpy = "^0.7.0"
pythclient ="^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
